--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,20 +1,27 @@
 <div class='login'>
     <h1>Enter your login details.</h1>
+    <div
+        class='login_error'
+        *ngIf='!exists'
+    >
+        <p>Username or password incorrect.</p>
+        <button (click)='closeError()'>x</button>
+    </div>
     <div class='login_inputs'>
         <label>
-            <span>
-                Username
-                <span *ngIf='!exists' class='invalid_entry'>Doesn't exist</span>
-            </span>
+            Username
             <input [(ngModel)]='username'>
         </label>
         <label>
-            <span>
-                Password
-                <span *ngIf='!exists' class='invalid_entry'>Doesn't exist</span>
-            </span>
-            <input [(ngModel)]='password'>
+            Password
+            <input
+                type='password'
+                [(ngModel)]='password'
+            >
         </label>
     </div>
-    <button class='login_button' (click)='loginUser()'>Log in</button>
+    <button
+        class='login_button'
+        (click)='loginUser()'
+    >Log in</button>
 </div>
