--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,31 +1,33 @@
 <div class='signup'>
     <h1 class='signup_heading'>Create your new account.</h1>
+    <div
+        class='signup_error'
+        *ngIf='!unique'
+    >
+        <p>User already exists.</p>
+        <button (click)='closeError()'>x</button>
+    </div>
     <div class='signup_inputs'>
         <label>
-            <span>
-                Username
-                <span *ngIf='!valid' class='invalid_entry'>Invalid</span>
-                <span *ngIf='!unique' class='invalid_entry'>Already exists</span>
-            </span> 
+            Username
+            <span *ngIf='!validUsername' class='invalid_entry'>Invalid</span>
             <input [(ngModel)]='username'>
         </label>
         <label>
-            <span>
-                Email
-                <span *ngIf='!valid' class='invalid_entry'>Invalid</span>
-                <span *ngIf='!unique' class='invalid_entry'>Already exists</span>
-            </span>
+            Email
+            <span *ngIf='!validEmail' class='invalid_entry'>Invalid</span>
             <input [(ngModel)]='email'>
         </label>
         <label>
-            <span>
-                Password
-                <span *ngIf='!valid' class='invalid_entry'>Invalid</span>
-            </span>
-            <input [(ngModel)]='password'>
+            Password
+            <span *ngIf='!validPassword' class='invalid_entry'>Invalid</span>
+            <input
+                type='password'
+                [(ngModel)]='password'
+            >
         </label>
     </div>
-    <button 
+    <button
         class='signup_button'
         (click)='validateAndSave()'
     >Sign up</button>
