--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,11 +1,30 @@
 .login {
     padding: 1em 2em;
     border: 1px solid black;
-    border-radius: 0.5em;
+    border-radius: 0.5rem;
 }
 
-.invalid_entry {
+.login_error {
+    padding: 1em;
+    border: 1px solid black;
+    border-radius: 0.5rem;
     color: red;
+    margin-bottom: 1em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.login_error > p {
+    margin: 0;
+}
+
+.login_error > button {
+    width: 1.5em;
+    height: 1.5em;
+    border: 0;
+    border-radius: 50%;
+    box-shadow: 0 0 0.25em black;
 }
 
 .login_inputs {
