--- a/src/app/components/signup/signup.component.css
+++ b/src/app/components/signup/signup.component.css
@@ -4,6 +4,29 @@
     border-radius: 0.5rem;
 }
 
+.signup_error {
+    padding: 1em;
+    border: 1px solid black;
+    border-radius: 0.5rem;
+    color: red;
+    margin-bottom: 1em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.signup_error > p {
+    margin: 0;
+}
+
+.signup_error > button {
+    width: 1.5em;
+    height: 1.5em;
+    border: 0;
+    border-radius: 50%;
+    box-shadow: 0 0 0.25em black;
+}
+
 .invalid_entry {
     color: red;
 }
