--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,20 @@ body {
     margin: 0;
     font: 1rem 'Roboto', sans-serif;
 }
+
+.login_link {
+    font-size: 1.2em;
+    width: 100%;
+    height: 2.25em;
+    border-radius: 0.25rem;
+    color: white;
+    border: 2px solid hsl(232deg, 65%, 27%);
+    background: hsl(232deg, 65%, 27%);
+    text-decoration: none;
+    display: grid;
+    place-items: center;
+}
+
+.login_link:active {
+    box-shadow: inset 0 0 0 2px white;
+}
