--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,5 +3,5 @@
     min-height: 100vh;
     display: flex;
     justify-content: center;
-    /* align-items: center; */
+    align-items: center;
 }
