--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,7 +14,21 @@
 
 <div
     class='home_hotels'
-    *ngIf='hotelsData.length > 0'
+    *ngIf='hotelsData.length > 0 && loggedUser'
 >
-    <div *ngFor='let item of hotelsData'>{{item.name}}</div>
+    <div
+        class='home_hotel'
+        *ngFor='let hotel of hotelsData'
+    >
+        <img
+            class='home_hotel_img'
+            [src]='baseUrl + hotel.image'
+        >
+        <div class='home_hotel_info'>
+            <h2>{{hotel.name}}</h2>
+            <p>City: {{hotel.city}}</p>
+            <p>Room price: {{hotel.room_price}}</p>
+            <p>Address: {{hotel.address}}</p>
+        </div>
+    </div>
 </div>
