--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,6 +12,8 @@
     >Log out</button>
 </div>
 
+<app-filter></app-filter>
+
 <div
     class='home_hotels'
     *ngIf='hotelsData.length > 0 && loggedUser'
