--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,28 +12,34 @@
     >Log out</button>
 </div>
 
-<app-filter></app-filter>
-
-<div
-    class='home_hotels'
-    *ngIf='hotelsData.length > 0 && loggedUser'
->
+<div *ngIf='loggedUser'>
+    <app-filter
+        [allAmenities]='allAmenities'
+        (hotelSearchEvent)='updateHotelSearch($event)'
+        (citySearchEvent)='updateCitySearch($event)'
+    ></app-filter>
+    
     <div
-        class='home_hotel'
-        *ngFor='let hotel of hotelsData; let hotelIndex = index'
+        class='home_hotels'
+        *ngIf='filteredHotels.length > 0 && loggedUser'
     >
-        <img
-            class='home_hotel_img'
-            [src]='baseUrl + hotel.image'
+        <div
+            class='home_hotel'
+            *ngFor='let hotel of filteredHotels; let hotelIndex = index'
         >
-        <div class='home_hotel_info'>
-            <h2>{{hotel.name}}</h2>
-            <p>City: {{hotel.city}}</p>
-            <p>Room price: {{hotel.room_price}}</p>
-            <p>Address: {{hotel.address}}</p>
-            <div class='home_hotel_amenity'>
-                <p>Services:</p>
-                <p *ngFor='let name of amenityNames[hotelIndex].names'>{{name}},</p>
+            <img
+                class='home_hotel_img'
+                [src]='baseUrl + hotel.image'
+            >
+            <div class='home_hotel_info'>
+                <h2>{{hotel.name}}</h2>
+                <p>City: {{hotel.city}}</p>
+                <p>Room price: {{hotel.room_price}}</p>
+                <p>Address: {{hotel.address}}</p>
+                <div class='home_hotel_amenity'>
+                    <p>Services:</p>
+                    <p *ngFor='let name of amenityNames[hotelIndex].names'>{{name}},</p>
+                </div>
             </div>
         </div>
     </div>
