--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -26,7 +26,7 @@
                 class='filter_amenity'
                 *ngFor='let amenity of allAmenities'
             >
-                <input type='checkbox'>
+                <input type='checkbox' [(ngModel)]='checkboxFlag'>
                 {{amenity.name}}
             </label>
         </div>
