--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,6 +17,7 @@
         [allAmenities]='allAmenities'
         (hotelSearchEvent)='updateHotelSearch($event)'
         (citySearchEvent)='updateCitySearch($event)'
+        (amenitiesCheckedEvent)='updateAmenitiesChecked($event)'
     ></app-filter>
     
     <div
